--- a/pokemons_list.html
+++ b/pokemons_list.html
@@ -64,13 +64,17 @@
     
         <ion-content>
             <ion-grid>
-                <ion-row id="pokelist">
+                <ion-row
+                    id="pokelist" 
+                    class="ion-justify-content-center">
+
                 </ion-row>
             </ion-grid>
         </ion-content>
 
         <ion-footer>
-            <ion-toolbar color="secondary">
+            <ion-toolbar 
+                color="secondary">
                 <ion-title
                     class="ion-text-center">
                     Dev by Kal Nascimento
