--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -67,15 +67,16 @@
             color="primary">
             <ion-grid
                 class="ion-margin-vertical">
+                <ion-row size="auto" class="ion-justify-content-center">
+                    <a class="return "href="./pokemons_list.html">voltar</a>
+                </ion-row>
                 <ion-row
                     id="pokelist" 
                     class="ion-justify-content-center">
-                    <a class="return"href="./pokemons_list.html">voltar</a>
                     <ion-card
                         id="container"
                         class="container ion-text-center"
                         color="primary">
-                        
                         <img 
                             id="img-pokemon"
                             alt="pokemons s2" 
@@ -83,7 +84,7 @@
                         <ion-card-header>
                             <ion-card-title
                                 id="name-pokemon"
-                                class="ion-text-center ion-text-capitalize">
+                                class="ion-text-center ion-text-capitalize ion-padding-vertical">
                                 pokemon
                             </ion-card-title>
                         </ion-card-header>
