Feat pokeball img is a link bro

--- a/pokemons_list.html
+++ b/pokemons_list.html
@@ -22,12 +22,13 @@
                     <ion-row>
                         <ion-col class="ion-padding-horizontal">
                             <ion-title>
-                                <img 
-                                id="test"
-                                    class="header-logo" 
-                                    src="./assets/img/pokeball_icon.svg" 
-                                    alt=""
+                                <a href="/">
+                                    <img 
+                                        class="header-logo" 
+                                        src="./assets/img/pokeball_icon.svg" 
+                                        alt=""
                                     >
+                                </a>
                             </ion-title>
                         </ion-col>
                         <ion-col class="ion-padding-horizontal ion-text-right">
