Fix width card details

--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -69,7 +69,8 @@
             color="primary">
             <ion-grid
                 class="ion-margin-vertical">
-                <ion-row size="auto" class="ion-justify-content-center">
+                <ion-row size="auto" 
+                    class="ion-justify-content-center">
                     <a class="return "href="./pokemons_list.html">voltar</a>
                 </ion-row>
                 <ion-row
