--- a/pokemon_details.html
+++ b/pokemon_details.html
@@ -32,6 +32,9 @@
                                 </a>
                             </ion-title>
                         </ion-col>
+                        <i-col>
+                            <a class="return "href="./pokemons_list.html">voltar</a>
+                        </i-col>
                         <ion-col class="ion-padding-horizontal ion-text-right">
                             <ion-icon
                                 id="searchbar-icon-outside" 
@@ -71,7 +74,6 @@
                 class="ion-margin-vertical">
                 <ion-row size="auto" 
                     class="ion-justify-content-center">
-                    <a class="return "href="./pokemons_list.html">voltar</a>
                 </ion-row>
                 <ion-row
                     id="pokelist" 
