Fix/ Conserto da busca por nome

--- a/pokemons_list.html
+++ b/pokemons_list.html
@@ -46,6 +46,7 @@
                                     <input
                                         id="input"
                                         type="text"
+                                        title="Pressione 'Enter' com o campo vazio para mostrar todos os pokemons"
                                         autocomplete="off"
                                         placeholder="Buscar pokemon pelo nome">
                                     </input>
@@ -75,10 +76,12 @@
                 <ion-row
                     class="buttons ion-justify-content-center ion-padding-vertical">
                     <ion-button 
+                        title="Click para voltar aos pokemons anteriores"
                         id="voltar"
                         color="secondary">voltar
                     </ion-button>
-                    <ion-button 
+                    <ion-button
+                        title="Click para ver mais pokemons"
                         id="avancar"
                         color="secondary">avançar
                     </ion-button>
